rename page.css 1

--- a/airbnb-for-work.html
+++ b/airbnb-for-work.html
@@ -266,7 +266,7 @@
                                               elementtiming="LCP-target"
                                               class="heading"
                                             >
-                                              <div class="_26piifo">
+                                              <div class="notification__container-join">
                                                 Join Airbnb for Work
                                               </div>
                                             </h3>
@@ -320,7 +320,7 @@
                                                 <button
                                                   type="submit"
                                                   disabled=""
-                                                  class="_ob4m31y"
+                                                  class="hero-banner__form-btn"
                                                   aria-busy="false"
                                                 >
                                                   <span class="hero-banner__submit-btn-text"
@@ -689,7 +689,7 @@
                                             elementtiming="LCP-target"
                                             class="heading"
                                           >
-                                            <div class="_26piifo">
+                                            <div class="notification__container-join">
                                               Join Airbnb for Work
                                             </div>
                                           </h3>
