--- a/become-a-host/photos.html
+++ b/become-a-host/photos.html
@@ -432,9 +432,9 @@
                                       );
                                     "
                                   >
-                                    <div class="_1byskwn">
+                                    <div class="account-container__menu-container">
                                       <div class="_10gkno6i">
-                                        <div class="_18dgbyf" style="">
+                                        <div class="account-container-mb__header-profile-wrapper" style="">
                                           <div data-testid="droppable-space">
                                             <div
                                               data-testid="draggable-photo"
@@ -576,7 +576,7 @@
                                         </div>
                                       </div>
                                       <div class="_83nzdcg">
-                                        <div class="_18dgbyf" style="">
+                                        <div class="account-container-mb__header-profile-wrapper" style="">
                                           <div data-testid="droppable-space">
                                             <div
                                               data-testid="draggable-photo"
@@ -713,7 +713,7 @@
                                         </div>
                                       </div>
                                       <div class="_83nzdcg">
-                                        <div class="_18dgbyf" style="">
+                                        <div class="account-container-mb__header-profile-wrapper" style="">
                                           <div data-testid="droppable-space">
                                             <div
                                               data-testid="draggable-photo"
@@ -850,7 +850,7 @@
                                         </div>
                                       </div>
                                       <div class="_83nzdcg">
-                                        <div class="_18dgbyf" style="">
+                                        <div class="account-container-mb__header-profile-wrapper" style="">
                                           <div data-testid="droppable-space">
                                             <div
                                               data-testid="draggable-photo"
@@ -987,7 +987,7 @@
                                         </div>
                                       </div>
                                       <div class="_83nzdcg">
-                                        <div class="_18dgbyf" style="">
+                                        <div class="account-container-mb__header-profile-wrapper" style="">
                                           <div data-testid="droppable-space">
                                             <div
                                               data-testid="draggable-photo"
@@ -1124,7 +1124,7 @@
                                         </div>
                                       </div>
                                       <div class="_83nzdcg">
-                                        <div class="_18dgbyf">
+                                        <div class="account-container-mb__header-profile-wrapper">
                                           <div
                                             class="relative"
                                             style="padding-bottom: 66.67%"
