--- a/calendar.html
+++ b/calendar.html
@@ -383,7 +383,7 @@
                                   ></path>
                                 </svg>
                               </span></button
-                            ><span class="_1fvtq1g"
+                            ><span class="calendar-section__prevoius-month"
                               ><button
                                 aria-label="Previous month"
                                 type="button"
@@ -1000,7 +1000,7 @@
                                   <div class="calendar-section__month-previous-day-overlay"></div>
                                 </div>
                                 <div class="calendar-section__month-view-day-table-data-wrapper">
-                                  <div class="_z3inzmm"><span>1</span></div>
+                                  <div class="calendar-section__month-day-active"><span>1</span></div>
                                   <div class="calendar-section__month-previous-day-overlay"></div>
                                 </div>
                                 <div class="calendar-section__month-view-day-table-data-wrapper">
@@ -1039,7 +1039,7 @@
                                       class="rbc-event-content w-full"
                                       title="Cooking Deep Fried Bright Orange Battered Eggs"
                                     >
-                                      <div class="_1skxaokw">
+                                      <div class="calendar-section__month-time-content">
                                         <div>
                                           <span class="calendar-sideba__sched-event-time-wrapper">9:00 PM</span>
                                         </div>
