--- a/calendar_agenda.html
+++ b/calendar_agenda.html
@@ -386,7 +386,7 @@
                                   ></path>
                                 </svg>
                               </span></button
-                            ><span class="_1fvtq1g"
+                            ><span class="calendar-section__prevoius-month"
                               ><button
                                 aria-label="Previous month"
                                 type="button"
@@ -958,12 +958,12 @@
                                   >
                                     <div class="explore-filter-daterange__date-prev-month">
                                       <div
-                                        class="main_content__calendar-container"
+                                        class="main-content__calendar-container"
                                         data-visible="false"
                                         style="padding: 0px"
                                       >
-                                        <div class="_gucugi">
-                                          <div class="_nm3mze"></div>
+                                        <div class="main-content__calendar-spacer-wrapper">
+                                          <div class="main-content__calendar-spacer"></div>
                                         </div>
                                         <table
                                           class="main_content__calendar-table"
@@ -1759,7 +1759,7 @@
                                                     <div class="main_content__calendar-table-data-wrapper-text">
                                                       25
                                                     </div>
-                                                    <div class="_1aqszpf">
+                                                    <div class="main-content__calendar-day-icon">
                                                       <svg
                                                         width="7"
                                                         height="7"
@@ -1815,7 +1815,7 @@
                                                     <div class="main_content__calendar-table-data-wrapper-text">
                                                       26
                                                     </div>
-                                                    <div class="_1aqszpf">
+                                                    <div class="main-content__calendar-day-icon">
                                                       <svg
                                                         width="7"
                                                         height="7"
@@ -1971,12 +1971,12 @@
                                     </div>
                                     <div class="explore-filter-daterange__date-current-month">
                                       <div
-                                        class="main_content__calendar-container"
+                                        class="main-content__calendar-container"
                                         data-visible="true"
                                         style="padding: 0px"
                                       >
-                                        <div class="_gucugi">
-                                          <div class="_nm3mze"></div>
+                                        <div class="main-content__calendar-spacer-wrapper">
+                                          <div class="main-content__calendar-spacer"></div>
                                         </div>
                                         <table
                                           class="main_content__calendar-table"
@@ -2257,9 +2257,9 @@
                                                   class="hero-banner__content-bg"
                                                   data-testid="datepicker-day-2022-07-09"
                                                 >
-                                                  <div class="_1naxf6gm">
+                                                  <div class="hero-banner__content-day-active">
                                                     <div class="main_content__calendar-table-data-wrapper-text">9</div>
-                                                    <div class="_1aqszpf">
+                                                    <div class="main-content__calendar-day-icon">
                                                       <svg
                                                         width="7"
                                                         height="7"
@@ -3003,12 +3003,12 @@
                                     </div>
                                     <div class="explore-filter-daterange__date-next-month">
                                       <div
-                                        class="main_content__calendar-container"
+                                        class="main-content__calendar-container"
                                         data-visible="false"
                                         style="padding: 0px"
                                       >
-                                        <div class="_gucugi">
-                                          <div class="_nm3mze"></div>
+                                        <div class="main-content__calendar-spacer-wrapper">
+                                          <div class="main-content__calendar-spacer"></div>
                                         </div>
                                         <table
                                           class="main_content__calendar-table"
@@ -4619,7 +4619,7 @@
                                 </div>
                               </label>
                             </div>
-                            <div class="_1fq2b5e">
+                            <div class="main_content__details-group-note">
                               You can host up to 10 guests
                             </div>
                           </div>
@@ -4650,7 +4650,7 @@
                                 </div>
                               </label>
                             </div>
-                            <div class="_1fq2b5e">
+                            <div class="main_content__details-group-note">
                               You can host up to 30 guests
                             </div>
                           </div>
