--- a/calendar_week.html
+++ b/calendar_week.html
@@ -384,7 +384,7 @@
                                   ></path>
                                 </svg>
                               </span></button
-                            ><span class="_1fvtq1g"
+                            ><span class="calendar-section__prevoius-month"
                               ><button
                                 aria-label="Previous month"
                                 type="button"
@@ -596,7 +596,7 @@
                                 role="radio"
                                 aria-checked="true"
                                 type="button"
-                                class="_eqdsxkm"
+                                class="main_content__date-categories-btn"
                               >
                                 <div class="_1fnsl63h">Week</div></button
                               ><button
