--- a/edit/what.html
+++ b/edit/what.html
@@ -767,16 +767,16 @@ Join me in this fun and easy cooking experience where you will learn techniques 
                                               <button
                                                 data-testid="CONCEPT_REFINEMENT_0-disclosure-row"
                                                 type="button"
-                                                class="_u1thwpg"
+                                                class="account-container-mb__menu-btn"
                                               >
-                                                <span class="_rortwiu"
+                                                <span class="account-container-mb__menu-btn-wrapper"
                                                   ><div
                                                     id="CONCEPT_REFINEMENT_0-disclosure-row-row-title"
                                                     class="explore-filter-menu__list-title"
                                                   >
                                                     Dish
                                                   </div>
-                                                  <span class="_ggw68c"
+                                                  <span class="account-container-mb__menu-arrow"
                                                     ><svg
                                                       viewBox="0 0 32 32"
                                                       xmlns="http://www.w3.org/2000/svg"
@@ -831,16 +831,16 @@ Join me in this fun and easy cooking experience where you will learn techniques 
                                               <button
                                                 data-testid="CONCEPT_REFINEMENT_1-disclosure-row"
                                                 type="button"
-                                                class="_u1thwpg"
+                                                class="account-container-mb__menu-btn"
                                               >
-                                                <span class="_rortwiu"
+                                                <span class="account-container-mb__menu-btn-wrapper"
                                                   ><div
                                                     id="CONCEPT_REFINEMENT_1-disclosure-row-row-title"
                                                     class="explore-filter-menu__list-title"
                                                   >
                                                     Cuisine
                                                   </div>
-                                                  <span class="_ggw68c"
+                                                  <span class="account-container-mb__menu-arrow"
                                                     ><svg
                                                       viewBox="0 0 32 32"
                                                       xmlns="http://www.w3.org/2000/svg"
