--- a/help.html
+++ b/help.html
@@ -1520,7 +1520,7 @@
                                                                             class="_18l8tew"
                                                                           >
                                                                             <div
-                                                                              class="_18dgbyf"
+                                                                              class="account-container-mb__header-profile-wrapper"
                                                                             >
                                                                               <div
                                                                                 class="footer__progress-active-wrapper"
@@ -1712,7 +1712,7 @@
                                                                             class="_18l8tew"
                                                                           >
                                                                             <div
-                                                                              class="_18dgbyf"
+                                                                              class="account-container-mb__header-profile-wrapper"
                                                                             >
                                                                               <div
                                                                                 class="footer__progress-active-wrapper"
@@ -1907,7 +1907,7 @@
                                                                     class="_18l8tew"
                                                                   >
                                                                     <div
-                                                                      class="_18dgbyf"
+                                                                      class="account-container-mb__header-profile-wrapper"
                                                                     >
                                                                       <div
                                                                         class="footer__progress-active-wrapper"
@@ -2064,7 +2064,7 @@
                                                                     class="_18l8tew"
                                                                   >
                                                                     <div
-                                                                      class="_18dgbyf"
+                                                                      class="account-container-mb__header-profile-wrapper"
                                                                     >
                                                                       <div
                                                                         class="footer__progress-active-wrapper"
@@ -2200,7 +2200,7 @@
                                                                   class="_18l8tew"
                                                                 >
                                                                   <div
-                                                                    class="_18dgbyf"
+                                                                    class="account-container-mb__header-profile-wrapper"
                                                                   >
                                                                     <div
                                                                       class="footer__progress-active-wrapper"
@@ -2356,7 +2356,7 @@
                                                                   class="_18l8tew"
                                                                 >
                                                                   <div
-                                                                    class="_18dgbyf"
+                                                                    class="account-container-mb__header-profile-wrapper"
                                                                   >
                                                                     <div
                                                                       class="footer__progress-active-wrapper"
