--- a/inbox.html
+++ b/inbox.html
@@ -1155,7 +1155,7 @@
                                                             ><button
                                                               aria-label="Select to open user profile for Jose Angelo (Host)"
                                                               type="button"
-                                                              class="_u1thwpg"
+                                                              class="account-container-mb__menu-btn"
                                                             >
                                                               <span
                                                                 class="_2rujrq"
@@ -1264,7 +1264,7 @@
                                                             ><button
                                                               aria-label="Select to open user profile for Jesselle"
                                                               type="button"
-                                                              class="_u1thwpg"
+                                                              class="account-container-mb__menu-btn"
                                                             >
                                                               <span
                                                                 class="_2rujrq"
@@ -1369,7 +1369,7 @@
                                                             ><button
                                                               aria-label="Select to open user profile for Jose Angelo (Host)"
                                                               type="button"
-                                                              class="_u1thwpg"
+                                                              class="account-container-mb__menu-btn"
                                                             >
                                                               <span
                                                                 class="_2rujrq"
@@ -1477,7 +1477,7 @@
                                                             ><button
                                                               aria-label="Select to open user profile for Jose Angelo (Host)"
                                                               type="button"
-                                                              class="_u1thwpg"
+                                                              class="account-container-mb__menu-btn"
                                                             >
                                                               <span
                                                                 class="_2rujrq"
