--- a/invite-friends.html
+++ b/invite-friends.html
@@ -181,7 +181,7 @@
                   <div class="_7qp4lh"></div>
                 </div>
                 <div class="_1ixo0nt">
-                  <div class="_1byskwn">
+                  <div class="account-container__menu-container">
                     <div class="_1s11ltsf">
                       <div class="_1upd47c">Common questions</div>
                       <div class="_1rdya67">
