--- a/payments/payment-methods.html
+++ b/payments/payment-methods.html
@@ -357,7 +357,7 @@
                                                       <div
                                                         class="tab__checkbox-mr-16"
                                                       >
-                                                        <div class="_oyq8vf">
+                                                        <div class="account-container-mb__menu-icon">
                                                           <div class="_18k2iy">
                                                             <svg
                                                               xmlns="http://www.w3.org/2000/svg"
@@ -1132,7 +1132,7 @@
                                                       <div
                                                         class="tab__checkbox-mr-16"
                                                       >
-                                                        <div class="_oyq8vf">
+                                                        <div class="account-container-mb__menu-icon">
                                                           <div class="_18k2iy">
                                                             <svg
                                                               xmlns="http://www.w3.org/2000/svg"
