--- a/personal-info.html
+++ b/personal-info.html
@@ -369,7 +369,7 @@
                                   </div>
                                   <form>
                                     <div style="margin-bottom: 16px">
-                                      <div class="_1byskwn">
+                                      <div class="account-container__menu-container">
                                         <div class="_1s1qfkt6">
                                           <div>
                                             <div class="spinner-chart__input-price">
@@ -1095,7 +1095,7 @@
                                       <div class="main_content__sidebar-legend-list">
                                         <div>
                                           <div>
-                                            <div class="_1byskwn">
+                                            <div class="account-container__menu-container">
                                               <div class="_15ubz5yg">
                                                 <div
                                                   style="margin-bottom: 16px"
@@ -1892,7 +1892,7 @@
                                                 </div>
                                               </div>
                                             </div>
-                                            <div class="_1byskwn">
+                                            <div class="account-container__menu-container">
                                               <div class="_1oa89j37">
                                                 <div
                                                   style="margin-bottom: 16px"
@@ -1964,7 +1964,7 @@
                                                 </div>
                                               </div>
                                             </div>
-                                            <div class="_1byskwn">
+                                            <div class="account-container__menu-container">
                                               <div class="_1oa89j37">
                                                 <div
                                                   style="margin-bottom: 16px"
@@ -2001,7 +2001,7 @@
                                                 </div>
                                               </div>
                                             </div>
-                                            <div class="_1byskwn">
+                                            <div class="account-container__menu-container">
                                               <div class="_15ubz5yg">
                                                 <div
                                                   style="margin-bottom: 16px"
@@ -2072,7 +2072,7 @@
                                                 </div>
                                               </div>
                                             </div>
-                                            <div class="_1byskwn">
+                                            <div class="account-container__menu-container">
                                               <div class="_15ubz5yg">
                                                 <div
                                                   style="margin-bottom: 16px"
@@ -2530,7 +2530,7 @@
                                           <div class="_klarpw"></div>
                                         </div>
                                       </div>
-                                      <div class="_1byskwn">
+                                      <div class="account-container__menu-container">
                                         <div class="_12ifkibl">
                                           <div style="margin-top: 16px">
                                             <div>
@@ -3713,7 +3713,7 @@
                                       </div>
                                       <form>
                                         <div style="margin-bottom: 16px">
-                                          <div class="_1byskwn">
+                                          <div class="account-container__menu-container">
                                             <div class="_1s1qfkt6">
                                               <div>
                                                 <div class="spinner-chart__input-price">
@@ -4462,7 +4462,7 @@
                                           <div class="main_content__sidebar-legend-list">
                                             <div>
                                               <div>
-                                                <div class="_1byskwn">
+                                                <div class="account-container__menu-container">
                                                   <div class="_15ubz5yg">
                                                     <div
                                                       style="
@@ -5756,7 +5756,7 @@
                                                     </div>
                                                   </div>
                                                 </div>
-                                                <div class="_1byskwn">
+                                                <div class="account-container__menu-container">
                                                   <div class="_1oa89j37">
                                                     <div
                                                       style="
@@ -5832,7 +5832,7 @@
                                                     </div>
                                                   </div>
                                                 </div>
-                                                <div class="_1byskwn">
+                                                <div class="account-container__menu-container">
                                                   <div class="_1oa89j37">
                                                     <div
                                                       style="
@@ -5879,7 +5879,7 @@
                                                     </div>
                                                   </div>
                                                 </div>
-                                                <div class="_1byskwn">
+                                                <div class="account-container__menu-container">
                                                   <div class="_15ubz5yg">
                                                     <div
                                                       style="
@@ -5971,7 +5971,7 @@
                                                     </div>
                                                   </div>
                                                 </div>
-                                                <div class="_1byskwn">
+                                                <div class="account-container__menu-container">
                                                   <div class="_15ubz5yg">
                                                     <div
                                                       style="
@@ -6448,7 +6448,7 @@
                                               <div class="_klarpw"></div>
                                             </div>
                                           </div>
-                                          <div class="_1byskwn">
+                                          <div class="account-container__menu-container">
                                             <div class="_12ifkibl">
                                               <div style="margin-top: 16px">
                                                 <div>
