--- a/places.html
+++ b/places.html
@@ -384,7 +384,7 @@
                           <div class="_qu10lt">
                             <div class="_w7wicc5">
                               <section>
-                                <div class="c3dtyuj dir dir-ltr">
+                                <div class="account-container-mb__header-wrapper dir dir-ltr">
                                   <div class="box-border">
                                     <div class="_1bpu39e">Bar</div>
                                     <div class="site-content__content-list-header">
@@ -397,7 +397,7 @@
                                         Nobu Malibu
                                       </h1>
                                     </div>
-                                    <div class="_1epbewz">
+                                    <div class="account-container-mb__header-show-more">
                                       <div class="main_content__details-cancel-button-wrapper">
                                         238 locals recommend<span
                                           class="text-highlight dir dir-ltr"
@@ -527,7 +527,7 @@
                                             Kelly
                                             <!-- -->
                                           </div>
-                                          <div class="_1c02cnn">
+                                          <div class="account-container__menu-card-desc">
                                             November 8, 2016
                                           </div>
                                         </div>
@@ -605,7 +605,7 @@
                                             Ehsan
                                             <!-- -->
                                           </div>
-                                          <div class="_1c02cnn">
+                                          <div class="account-container__menu-card-desc">
                                             April 25, 2022
                                           </div>
                                         </div>
@@ -692,7 +692,7 @@
                                             C-Starr Locations
                                             <!-- -->
                                           </div>
-                                          <div class="_1c02cnn">
+                                          <div class="account-container__menu-card-desc">
                                             March 27, 2022
                                           </div>
                                         </div>
@@ -779,7 +779,7 @@
                                             Jill
                                             <!-- -->
                                           </div>
-                                          <div class="_1c02cnn">
+                                          <div class="account-container__menu-card-desc">
                                             July 17, 2021
                                           </div>
                                         </div>
@@ -862,7 +862,7 @@
                                             Connie
                                             <!-- -->
                                           </div>
-                                          <div class="_1c02cnn">
+                                          <div class="account-container__menu-card-desc">
                                             June 1, 2021
                                           </div>
                                         </div>
@@ -949,7 +949,7 @@
                                             Adrian
                                             <!-- -->
                                           </div>
-                                          <div class="_1c02cnn">
+                                          <div class="account-container__menu-card-desc">
                                             January 31, 2021
                                           </div>
                                         </div>
@@ -16617,7 +16617,7 @@
                                 >
                                   <div class="flex">
                                     <div class="tab__checkbox-mr-16">
-                                      <div class="_oyq8vf">
+                                      <div class="account-container-mb__menu-icon">
                                         <svg
                                           viewBox="0 0 16 16"
                                           xmlns="http://www.w3.org/2000/svg"
