--- a/privacy-and-sharing.html
+++ b/privacy-and-sharing.html
@@ -369,7 +369,7 @@
                                                           <div class="explore-filter-menu__list-label">
                                                             <button
                                                               type="button"
-                                                              class="_u1thwpg"
+                                                              class="account-container-mb__menu-btn"
                                                             >
                                                               <span
                                                                 class="_l07b5z"
@@ -381,7 +381,7 @@
                                                                   personal data
                                                                 </div>
                                                                 <span
-                                                                  class="_ggw68c"
+                                                                  class="account-container-mb__menu-arrow"
                                                                   ><svg
                                                                     viewBox="0 0 32 32"
                                                                     xmlns="http://www.w3.org/2000/svg"
@@ -442,7 +442,7 @@
                                                                   account
                                                                 </div>
                                                                 <span
-                                                                  class="_ggw68c"
+                                                                  class="account-container-mb__menu-arrow"
                                                                   ><svg
                                                                     viewBox="0 0 32 32"
                                                                     xmlns="http://www.w3.org/2000/svg"
@@ -1048,7 +1048,7 @@
                                                   <div class="explore-filter-menu__list-label">
                                                     <button
                                                       type="button"
-                                                      class="_u1thwpg"
+                                                      class="account-container-mb__menu-btn"
                                                     >
                                                       <span class="_l07b5z"
                                                         ><div
@@ -1058,7 +1058,7 @@
                                                           Request your personal
                                                           data
                                                         </div>
-                                                        <span class="_ggw68c"
+                                                        <span class="account-container-mb__menu-arrow"
                                                           ><svg
                                                             viewBox="0 0 32 32"
                                                             xmlns="http://www.w3.org/2000/svg"
@@ -1111,7 +1111,7 @@
                                                         >
                                                           Delete your account
                                                         </div>
-                                                        <span class="_ggw68c"
+                                                        <span class="account-container-mb__menu-arrow"
                                                           ><svg
                                                             viewBox="0 0 32 32"
                                                             xmlns="http://www.w3.org/2000/svg"
