--- a/products.html
+++ b/products.html
@@ -2666,7 +2666,7 @@
                                                     </h2>
                                                   </div>
                                                 </div>
-                                                <div class="_1byskwn">
+                                                <div class="account-container__menu-container">
                                                   <div class="_19xnuo97">
                                                     <div
                                                       class="iikjzje i10xc1ab dir dir-ltr"
@@ -2907,7 +2907,7 @@
                                                     </button>
                                                   </div>
                                                   <div class="_1cvivhm">
-                                                    <div class="_1byskwn">
+                                                    <div class="account-container__menu-container">
                                                       <div class="_vd6w38n">
                                                         <div>
                                                           <div class="_9ns6hl">
@@ -9348,7 +9348,7 @@
                                                             ><button
                                                               aria-label="Rated 4.97 out of 5 from 134 reviews."
                                                               type="button"
-                                                              class="_u1thwpg"
+                                                              class="account-container-mb__menu-btn"
                                                             >
                                                               <span
                                                                 class="_1qx9l5ba"
@@ -10281,7 +10281,7 @@
                                                       </h2>
                                                     </div>
                                                   </div>
-                                                  <div class="_1byskwn">
+                                                  <div class="account-container__menu-container">
                                                     <div class="_19xnuo97">
                                                       <div
                                                         class="iikjzje i10xc1ab dir dir-ltr"
@@ -16642,7 +16642,7 @@
                                                                   ><button
                                                                     aria-label="Rated 4.97 out of 5 from 134 reviews."
                                                                     type="button"
-                                                                    class="_u1thwpg"
+                                                                    class="account-container-mb__menu-btn"
                                                                   >
                                                                     <span
                                                                       class="_1qx9l5ba"
@@ -17142,7 +17142,7 @@
                                                                   ><button
                                                                     aria-label="Rated 4.97 out of 5 from 134 reviews."
                                                                     type="button"
-                                                                    class="_u1thwpg"
+                                                                    class="account-container-mb__menu-btn"
                                                                   >
                                                                     <span
                                                                       class="_1qx9l5ba"
@@ -17837,7 +17837,7 @@
                                                                   ><button
                                                                     aria-label="Rated 4.97 out of 5 from 134 reviews."
                                                                     type="button"
-                                                                    class="_u1thwpg"
+                                                                    class="account-container-mb__menu-btn"
                                                                   >
                                                                     <span
                                                                       class="_1qx9l5ba"
@@ -19709,7 +19709,7 @@
                                                   />
                                                 </div>
                                                 <div class="_1cvivhm">
-                                                  <div class="_1byskwn">
+                                                  <div class="account-container__menu-container">
                                                     <div class="_vd6w38n">
                                                       <div>
                                                         <div class="_9ns6hl">
