--- a/resolutions_pay.html
+++ b/resolutions_pay.html
@@ -489,7 +489,7 @@
                     </section>
                   </section>
                 </div>
-                <div class="_1g05mp0x">
+                <div class="account-container__menu-wrapper">
                   <div class="_qoaox5">
                     <a href="/resolutions" class="btn-link"
                       ><span class="search__submit-btn-text-center"
