--- a/resources.html
+++ b/resources.html
@@ -4916,7 +4916,7 @@
                                   href="https://community.withairbnb.com"
                                   class="app-theme__navbar-left-menu-list-text-wrapper"
                                   ><div class="_91gafw">
-                                    <div class="_18dgbyf">
+                                    <div class="account-container-mb__header-profile-wrapper">
                                       <div class="tab__content-visibility">
                                         <span
                                           class="_y9cbsa"
@@ -4973,7 +4973,7 @@
                                   href="/help/hosting-experiences"
                                   class="app-theme__navbar-left-menu-list-text-wrapper"
                                   ><div class="_91gafw">
-                                    <div class="_18dgbyf">
+                                    <div class="account-container-mb__header-profile-wrapper">
                                       <div class="tab__content-visibility">
                                         <span
                                           class="_y9cbsa"
