--- a/reviews.html
+++ b/reviews.html
@@ -90,7 +90,7 @@
                   <!-- 1st page -->
                   <section>
                     <div class="_1pb0poc">
-                      <div class="_1byskwn">
+                      <div class="account-container__menu-container">
                         <div class="_15d5qr9n">
                           <div class="_1nu4ve4">
                             <div class="_ihd0yx">
@@ -341,7 +341,7 @@
                   <!-- 2nd page -->
                   <section class="hidden">
                     <div class="_1pb0poc">
-                      <div class="_1byskwn">
+                      <div class="account-container__menu-container">
                         <div class="_15d5qr9n">
                           <div class="_1nu4ve4">
                             <div class="_ihd0yx">
@@ -767,7 +767,7 @@
                   <!-- 3rd page -->
                   <section class="hidden">
                     <div class="_1pb0poc">
-                      <div class="_1byskwn">
+                      <div class="account-container__menu-container">
                         <div class="_15d5qr9n">
                           <div class="_1nu4ve4">
                             <div class="_ihd0yx">
@@ -1118,7 +1118,7 @@
                   <!-- 4th page -->
                   <section class="hidden">
                     <div class="_1pb0poc">
-                      <div class="_1byskwn">
+                      <div class="account-container__menu-container">
                         <div class="_15d5qr9n">
                           <div class="_1nu4ve4">
                             <div class="_ihd0yx">
@@ -1265,7 +1265,7 @@
                   <!-- 5th page -->
                   <section class="hidden">
                     <div class="_1pb0poc">
-                      <div class="_1byskwn">
+                      <div class="account-container__menu-container">
                         <div class="_15d5qr9n">
                           <div class="_1nu4ve4">
                             <div class="_ihd0yx">
@@ -1346,7 +1346,7 @@
                     </div>
                   </div>
                   <div class="_ua9072">
-                    <div class="_1byskwn">
+                    <div class="account-container__menu-container">
                       <div class="_153csg0n">
                         <div class="_fgc192">
                           <div class="_dj903s">
