--- a/signup_login.html
+++ b/signup_login.html
@@ -1668,7 +1668,7 @@
                                   aria-label="Back"
                                   role="button"
                                   type="button"
-                                  class="_u1thwpg"
+                                  class="account-container-mb__menu-btn"
                                 >
                                   <svg
                                     viewBox="0 0 32 32"
@@ -1992,7 +1992,7 @@
                                   aria-label="Back"
                                   role="button"
                                   type="button"
-                                  class="_u1thwpg"
+                                  class="account-container-mb__menu-btn"
                                 >
                                   <svg
                                     viewBox="0 0 32 32"
@@ -4709,7 +4709,7 @@
                                 aria-label="Back"
                                 role="button"
                                 type="button"
-                                class="_u1thwpg"
+                                class="account-container-mb__menu-btn"
                               >
                                 <svg
                                   viewBox="0 0 32 32"
@@ -5030,7 +5030,7 @@
                                 aria-label="Back"
                                 role="button"
                                 type="button"
-                                class="_u1thwpg"
+                                class="account-container-mb__menu-btn"
                               >
                                 <svg
                                   viewBox="0 0 32 32"
