--- a/submission/GeneralV.html
+++ b/submission/GeneralV.html
@@ -1057,7 +1057,7 @@
                                       General availability
                                     </h1>
                                   </div>
-                                  <div class="_1epbewz">
+                                  <div class="account-container-mb__header-show-more">
                                     <span class="_11oyobo"
                                       >You’ll schedule exact dates and times
                                       that you’re available to host before you
