--- a/submission/basic.html
+++ b/submission/basic.html
@@ -1151,18 +1151,18 @@
                                         <button
                                           data-testid="primary-language-row"
                                           type="button"
-                                          class="_u1thwpg"
+                                          class="account-container-mb__menu-btn"
                                           data-bs-toggle="modal"
                                           data-bs-target="#exampleModal"
                                         >
-                                          <span class="_rortwiu"
+                                          <span class="account-container-mb__menu-btn-wrapper"
                                             ><div
                                               id="primary-language-row-row-title"
                                               class="explore-filter-menu__list-title"
                                             >
                                               English
                                             </div>
-                                            <span class="_ggw68c"
+                                            <span class="account-container-mb__menu-arrow"
                                               ><svg
                                                 viewBox="0 0 32 32"
                                                 xmlns="http://www.w3.org/2000/svg"
@@ -1580,7 +1580,7 @@
           </header>
           <div class="modal__body">
             <div
-              class="_hq87c8"
+              class="account-container__menu"
               role="group"
               aria-labelledby="additional-languages-group-label"
             >
