--- a/submission/booking.html
+++ b/submission/booking.html
@@ -1054,7 +1054,7 @@
                                       Booking settings
                                     </h1>
                                   </div>
-                                  <div class="_1epbewz">
+                                  <div class="account-container-mb__header-show-more">
                                     <span class="_11oyobo"
                                       >We recommend setting your cutoff time
                                       close to your start time so more guests
