--- a/submission/guestReq.html
+++ b/submission/guestReq.html
@@ -1057,7 +1057,7 @@
                                       Who can attend your experience?
                                     </h1>
                                   </div>
-                                  <div class="_1epbewz">
+                                  <div class="account-container-mb__header-show-more">
                                     <span class="_11oyobo"
                                       >Keep in mind that someone booking your
                                       experience might book spots for other
