--- a/submission/photo.html
+++ b/submission/photo.html
@@ -1100,9 +1100,9 @@
                                       </div>
                                     </div>
                                     <div class="_1ny5tm2">
-                                      <div class="_1byskwn">
+                                      <div class="account-container__menu-container">
                                         <div class="_153y5wk9">
-                                          <div class="_18dgbyf">
+                                          <div class="account-container-mb__header-profile-wrapper">
                                             <div
                                               role="group"
                                               aria-label="Photo 1 of 5"
@@ -1226,7 +1226,7 @@
                                           </div>
                                         </div>
                                         <div class="_153y5wk9">
-                                          <div class="_18dgbyf">
+                                          <div class="account-container-mb__header-profile-wrapper">
                                             <div
                                               role="group"
                                               aria-label="Photo 2 of 5"
@@ -1350,7 +1350,7 @@
                                           </div>
                                         </div>
                                         <div class="_153y5wk9">
-                                          <div class="_18dgbyf">
+                                          <div class="account-container-mb__header-profile-wrapper">
                                             <div
                                               role="group"
                                               aria-label="Photo 3 of 5"
@@ -1474,7 +1474,7 @@
                                           </div>
                                         </div>
                                         <div class="_153y5wk9">
-                                          <div class="_18dgbyf">
+                                          <div class="account-container-mb__header-profile-wrapper">
                                             <div
                                               role="group"
                                               aria-label="Photo 4 of 5"
@@ -1598,7 +1598,7 @@
                                           </div>
                                         </div>
                                         <div class="_153y5wk9">
-                                          <div class="_18dgbyf">
+                                          <div class="account-container-mb__header-profile-wrapper">
                                             <div
                                               role="group"
                                               aria-label="Photo 5 of 5"
