--- a/submission/review.html
+++ b/submission/review.html
@@ -1098,9 +1098,9 @@
                                         <div class="explore-filter-menu__list-label">
                                           <button
                                             type="button"
-                                            class="_u1thwpg"
+                                            class="account-container-mb__menu-btn"
                                           >
-                                            <span class="_rortwiu"
+                                            <span class="account-container-mb__menu-btn-wrapper"
                                               ><div
                                                 id="disclosure-action-row-row-title"
                                                 class="explore-filter-menu__list-title"
@@ -1109,7 +1109,7 @@
                                                   >Local laws</span
                                                 >
                                               </div>
-                                              <span class="_ggw68c"
+                                              <span class="account-container-mb__menu-arrow"
                                                 ><svg
                                                   viewBox="0 0 32 32"
                                                   xmlns="http://www.w3.org/2000/svg"
@@ -1170,9 +1170,9 @@
                                         <div class="explore-filter-menu__list-label">
                                           <button
                                             type="button"
-                                            class="_u1thwpg"
+                                            class="account-container-mb__menu-btn"
                                           >
-                                            <span class="_rortwiu"
+                                            <span class="account-container-mb__menu-btn-wrapper"
                                               ><div
                                                 id="disclosure-action-row-row-title"
                                                 class="explore-filter-menu__list-title"
@@ -1181,7 +1181,7 @@
                                                   >Tour guiding</span
                                                 >
                                               </div>
-                                              <span class="_ggw68c"
+                                              <span class="account-container-mb__menu-arrow"
                                                 ><svg
                                                   viewBox="0 0 32 32"
                                                   xmlns="http://www.w3.org/2000/svg"
@@ -1242,9 +1242,9 @@
                                         <div class="explore-filter-menu__list-label">
                                           <button
                                             type="button"
-                                            class="_u1thwpg"
+                                            class="account-container-mb__menu-btn"
                                           >
-                                            <span class="_rortwiu"
+                                            <span class="account-container-mb__menu-btn-wrapper"
                                               ><div
                                                 id="disclosure-action-row-row-title"
                                                 class="explore-filter-menu__list-title"
@@ -1253,7 +1253,7 @@
                                                   >Animals</span
                                                 >
                                               </div>
-                                              <span class="_ggw68c"
+                                              <span class="account-container-mb__menu-arrow"
                                                 ><svg
                                                   viewBox="0 0 32 32"
                                                   xmlns="http://www.w3.org/2000/svg"
