--- a/submission/theme.html
+++ b/submission/theme.html
@@ -1080,15 +1080,15 @@
                                 >
                                   <div class="flex">
                                     <div class="explore-filter-menu__list-label">
-                                      <button type="button" class="_u1thwpg">
-                                        <span class="_rortwiu"
+                                      <button type="button" class="account-container-mb__menu-btn">
+                                        <span class="account-container-mb__menu-btn-wrapper"
                                           ><div
                                             id="primary-theme-row-row-title"
                                             class="explore-filter-menu__list-title"
                                           >
                                             Beekeeping
                                           </div>
-                                          <span class="_ggw68c"
+                                          <span class="account-container-mb__menu-arrow"
                                             ><svg
                                               viewBox="0 0 32 32"
                                               xmlns="http://www.w3.org/2000/svg"
@@ -1308,15 +1308,15 @@
                       >
                         <div class="flex">
                           <div class="explore-filter-menu__list-label">
-                            <button type="button" class="_u1thwpg">
-                              <span class="_rortwiu"
+                            <button type="button" class="account-container-mb__menu-btn">
+                              <span class="account-container-mb__menu-btn-wrapper"
                                 ><div
                                   id="Tag:510-row-row-title"
                                   class="explore-filter-menu__list-title"
                                 >
                                   Animals
                                 </div>
-                                <span class="_ggw68c"
+                                <span class="account-container-mb__menu-arrow"
                                   ><svg
                                     viewBox="0 0 32 32"
                                     xmlns="http://www.w3.org/2000/svg"
@@ -1354,15 +1354,15 @@
                       >
                         <div class="flex">
                           <div class="explore-filter-menu__list-label">
-                            <button type="button" class="_u1thwpg">
-                              <span class="_rortwiu"
+                            <button type="button" class="account-container-mb__menu-btn">
+                              <span class="account-container-mb__menu-btn-wrapper"
                                 ><div
                                   id="Tag:1347-row-row-title"
                                   class="explore-filter-menu__list-title"
                                 >
                                   Art and design
                                 </div>
-                                <span class="_ggw68c"
+                                <span class="account-container-mb__menu-arrow"
                                   ><svg
                                     viewBox="0 0 32 32"
                                     xmlns="http://www.w3.org/2000/svg"
@@ -1400,15 +1400,15 @@
                       >
                         <div class="flex">
                           <div class="explore-filter-menu__list-label">
-                            <button type="button" class="_u1thwpg">
-                              <span class="_rortwiu"
+                            <button type="button" class="account-container-mb__menu-btn">
+                              <span class="account-container-mb__menu-btn-wrapper"
                                 ><div
                                   id="CustomView:202-row-row-title"
                                   class="explore-filter-menu__list-title"
                                 >
                                   Culture, society, and science
                                 </div>
-                                <span class="_ggw68c"
+                                <span class="account-container-mb__menu-arrow"
                                   ><svg
                                     viewBox="0 0 32 32"
                                     xmlns="http://www.w3.org/2000/svg"
@@ -1446,15 +1446,15 @@
                       >
                         <div class="flex">
                           <div class="explore-filter-menu__list-label">
-                            <button type="button" class="_u1thwpg">
-                              <span class="_rortwiu"
+                            <button type="button" class="account-container-mb__menu-btn">
+                              <span class="account-container-mb__menu-btn-wrapper"
                                 ><div
                                   id="Tag:1718-row-row-title"
                                   class="explore-filter-menu__list-title"
                                 >
                                   Drink
                                 </div>
-                                <span class="_ggw68c"
+                                <span class="account-container-mb__menu-arrow"
                                   ><svg
                                     viewBox="0 0 32 32"
                                     xmlns="http://www.w3.org/2000/svg"
@@ -1492,15 +1492,15 @@
                       >
                         <div class="flex">
                           <div class="explore-filter-menu__list-label">
-                            <button type="button" class="_u1thwpg">
-                              <span class="_rortwiu"
+                            <button type="button" class="account-container-mb__menu-btn">
+                              <span class="account-container-mb__menu-btn-wrapper"
                                 ><div
                                   id="Tag:455-row-row-title"
                                   class="explore-filter-menu__list-title"
                                 >
                                   Entertainment
                                 </div>
-                                <span class="_ggw68c"
+                                <span class="account-container-mb__menu-arrow"
                                   ><svg
                                     viewBox="0 0 32 32"
                                     xmlns="http://www.w3.org/2000/svg"
@@ -1538,15 +1538,15 @@
                       >
                         <div class="flex">
                           <div class="explore-filter-menu__list-label">
-                            <button type="button" class="_u1thwpg">
-                              <span class="_rortwiu"
+                            <button type="button" class="account-container-mb__menu-btn">
+                              <span class="account-container-mb__menu-btn-wrapper"
                                 ><div
                                   id="Tag:1686-row-row-title"
                                   class="explore-filter-menu__list-title"
                                 >
                                   Food
                                 </div>
-                                <span class="_ggw68c"
+                                <span class="account-container-mb__menu-arrow"
                                   ><svg
                                     viewBox="0 0 32 32"
                                     xmlns="http://www.w3.org/2000/svg"
@@ -1584,15 +1584,15 @@
                       >
                         <div class="flex">
                           <div class="explore-filter-menu__list-label">
-                            <button type="button" class="_u1thwpg">
-                              <span class="_rortwiu"
+                            <button type="button" class="account-container-mb__menu-btn">
+                              <span class="account-container-mb__menu-btn-wrapper"
                                 ><div
                                   id="CustomView:201-row-row-title"
                                   class="explore-filter-menu__list-title"
                                 >
                                   History and literature
                                 </div>
-                                <span class="_ggw68c"
+                                <span class="account-container-mb__menu-arrow"
                                   ><svg
                                     viewBox="0 0 32 32"
                                     xmlns="http://www.w3.org/2000/svg"
@@ -1630,15 +1630,15 @@
                       >
                         <div class="flex">
                           <div class="explore-filter-menu__list-label">
-                            <button type="button" class="_u1thwpg">
-                              <span class="_rortwiu"
+                            <button type="button" class="account-container-mb__menu-btn">
+                              <span class="account-container-mb__menu-btn-wrapper"
                                 ><div
                                   id="Tag:2513-row-row-title"
                                   class="explore-filter-menu__list-title"
                                 >
                                   Nature and outdoors
                                 </div>
-                                <span class="_ggw68c"
+                                <span class="account-container-mb__menu-arrow"
                                   ><svg
                                     viewBox="0 0 32 32"
                                     xmlns="http://www.w3.org/2000/svg"
@@ -1676,15 +1676,15 @@
                       >
                         <div class="flex">
                           <div class="explore-filter-menu__list-label">
-                            <button type="button" class="_u1thwpg">
-                              <span class="_rortwiu"
+                            <button type="button" class="account-container-mb__menu-btn">
+                              <span class="account-container-mb__menu-btn-wrapper"
                                 ><div
                                   id="CustomView:203-row-row-title"
                                   class="explore-filter-menu__list-title"
                                 >
                                   Sightseeing, shopping and transportation
                                 </div>
-                                <span class="_ggw68c"
+                                <span class="account-container-mb__menu-arrow"
                                   ><svg
                                     viewBox="0 0 32 32"
                                     xmlns="http://www.w3.org/2000/svg"
@@ -1722,15 +1722,15 @@
                       >
                         <div class="flex">
                           <div class="explore-filter-menu__list-label">
-                            <button type="button" class="_u1thwpg">
-                              <span class="_rortwiu"
+                            <button type="button" class="account-container-mb__menu-btn">
+                              <span class="account-container-mb__menu-btn-wrapper"
                                 ><div
                                   id="Tag:459-row-row-title"
                                   class="explore-filter-menu__list-title"
                                 >
                                   Sports
                                 </div>
-                                <span class="_ggw68c"
+                                <span class="account-container-mb__menu-arrow"
                                   ><svg
                                     viewBox="0 0 32 32"
                                     xmlns="http://www.w3.org/2000/svg"
@@ -1768,15 +1768,15 @@
                       >
                         <div class="flex">
                           <div class="explore-filter-menu__list-label">
-                            <button type="button" class="_u1thwpg">
-                              <span class="_rortwiu"
+                            <button type="button" class="account-container-mb__menu-btn">
+                              <span class="account-container-mb__menu-btn-wrapper"
                                 ><div
                                   id="Tag:2948-row-row-title"
                                   class="explore-filter-menu__list-title"
                                 >
                                   Wellness
                                 </div>
-                                <span class="_ggw68c"
+                                <span class="account-container-mb__menu-arrow"
                                   ><svg
                                     viewBox="0 0 32 32"
                                     xmlns="http://www.w3.org/2000/svg"
