--- a/submission/title.html
+++ b/submission/title.html
@@ -1056,7 +1056,7 @@
                                       Let’s give your experience a name
                                     </h1>
                                   </div>
-                                  <div class="_1epbewz">
+                                  <div class="account-container-mb__header-show-more">
                                     <span class="_11oyobo"
                                       >Make it descriptive and unique so guests
                                       will understand what you’re
