--- a/submission/video.html
+++ b/submission/video.html
@@ -1054,7 +1054,7 @@
                                       Submit a video demonstration
                                     </h1>
                                   </div>
-                                  <div class="_1epbewz">
+                                  <div class="account-container-mb__header-show-more">
                                     <span class="_11oyobo"
                                       >Upload a video that demonstrates the
                                       online experience that you’d like to host.
