--- a/submission/wwd.html
+++ b/submission/wwd.html
@@ -1379,15 +1379,15 @@ Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem
                                 >
                                   <div class="flex">
                                     <div class="explore-filter-menu__list-label">
-                                      <button type="button" class="_u1thwpg">
-                                        <span class="_rortwiu"
+                                      <button type="button" class="account-container-mb__menu-btn">
+                                        <span class="account-container-mb__menu-btn-wrapper"
                                           ><div
                                             id="CustomView:113-row-title"
                                             class="explore-filter-menu__list-title"
                                           >
                                             Animal species
                                           </div>
-                                          <span class="_ggw68c"
+                                          <span class="account-container-mb__menu-arrow"
                                             ><svg
                                               viewBox="0 0 32 32"
                                               xmlns="http://www.w3.org/2000/svg"
