--- a/edit/GuestReq.html
+++ b/edit/GuestReq.html
@@ -898,7 +898,7 @@
                                           for="additional-requirements-text-area"
                                           ><div class="_1wgf3yo">
                                             <div
-                                              class="_18dgbyf"
+                                              class="account-container-mb__header-profile-wrapper"
                                               style="
                                                 color: rgb(34, 34, 34);
                                                 font-size: 16px;
