--- a/edit/about.html
+++ b/edit/about.html
@@ -539,7 +539,7 @@
                                         <label for="about_host_input"
                                           ><div class="_1wgf3yo">
                                             <div
-                                              class="_18dgbyf"
+                                              class="account-container-mb__header-profile-wrapper"
                                               style="
                                                 color: rgb(34, 34, 34);
                                                 font-size: 16px;
