--- a/edit/photos.html
+++ b/edit/photos.html
@@ -463,7 +463,7 @@
                                 data-plugin-in-point-id="COVER_PHOTO"
                                 data-section-id="COVER_PHOTO"
                               >
-                                <div class="_1byskwn">
+                                <div class="account-container__menu-container">
                                   <div class="_1oa4lmzv">
                                     <div class="_l8ik20">
                                       <div class="relative">
@@ -657,7 +657,7 @@
                                 data-plugin-in-point-id="GALLERY_PHOTOS"
                                 data-section-id="GALLERY_PHOTOS"
                               >
-                                <div class="_1byskwn">
+                                <div class="account-container__menu-container">
                                   <div class="_1oa4lmzv">
                                     <div class="_l8ik20">
                                       <div class="relative">
