--- a/submission/GroupSize.html
+++ b/submission/GroupSize.html
@@ -1060,7 +1060,7 @@
                                       Maximum group size
                                     </h1>
                                   </div>
-                                  <div class="_1epbewz">
+                                  <div class="account-container-mb__header-show-more">
                                     <span class="_11oyobo"
                                       >Think about what group size is best for
                                       your experience. Is it more interactive
