--- a/submission/GuestP.html
+++ b/submission/GuestP.html
@@ -1054,7 +1054,7 @@
                                       Guest pricing
                                     </h1>
                                   </div>
-                                  <div class="_1epbewz">
+                                  <div class="account-container-mb__header-show-more">
                                     <span class="_11oyobo"
                                       >How much you charge is entirely up to
                                       you. Enter the price you want each guest
@@ -1073,7 +1073,7 @@
                             <div>
                               <div class="_1nphj51">
                                 <div style="margin-bottom: 8px">
-                                  <div class="_1byskwn">
+                                  <div class="account-container__menu-container">
                                     <div class="_1eusvadb"></div>
                                     <div class="_1r533mk">
                                       <div class="_14h395t" aria-hidden="true">
@@ -1121,7 +1121,7 @@
                                     </div>
                                   </div>
                                 </div>
-                                <div class="_1byskwn">
+                                <div class="account-container__menu-container">
                                   <div class="_1eusvadb">
                                     <div class="_1mvd8te">
                                       <section>
